# soundmirror

./: .gitignore  .python-version  ANTIGRAVITY.md  README.md  compare_markers.py  dump_metadata_to_csv.py  fix_metadata.py  fix_newlines.py  mirrors.json  pyproject.toml  run.py  test.flac  test_mp3.py  test_mp4.py  test_orphan_v2.py  test_regex.py  test_tags.py
docs/: setup.md  usage.md
src/: test_orphan.py
src/tidal_serato_sync/: __init__.py  cli.py  crate_handler.py  csv_handler.py  db_manager.py  discogs_manager.py  drive_sync_manager.py  main.py  metadata_handler.py  sync_engine.py  tidal_manager.py
tests/: test_csv_handler.py  test_idempotency.py
