[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tidal-serato-sync"
version = "1.1.0"
description = "Bidirectional sync tool between Serato crates and Tidal playlists with download recovery"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    { name = "Raton", email = "raton@raton.com" }
]
keywords = ["tidal", "serato", "sync", "playlist", "music", "dj"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "tidalapi>=0.8.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
soundmirror = "tidal_serato_sync.cli:main"

[project.urls]


[tool.setuptools]
packages = ["tidal_serato_sync"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
tidal_serato_sync = ["*.json"]
